--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 
 	<style>
         :root {
-            --primary-color: #bbbbbb;
-            --secondary-color: #D42600;
+            --primary-color: #ea3023;
             --dark-color: #363434;
-            --gray-color: #676262;
+            --gray-color: #798594;
             --transition: .3s all ease-in-out;
         }
 	</style>
@@ -36,10 +35,216 @@
 	<link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <body>
 
-<script type=" text/javascript" src="./assets/plugins/jquery.min.js"></script>
+<div class="main">
+	<div class="section-service section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-heading">
+						<div class="section-heading_title">
+							Sản phẩm & dịch vụ
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card service-card border-0">
+						<div class="card-header border-bottom-0 rounded-0 p-0 bg-transparent">
+							<img src="./assets/images/service/carddiscount.png" alt="">
+						</div>
+						<div class="card-body px-0">
+							<div class="card-title">
+								Chiết khấu mã thẻ
+							</div>
+							<div class="card-text">
+								<p>Cung cấp tất cả mệnh giá của các loại thẻ điện thoại, thẻ game trong nước và quốc tế
+									với chiết khấu theo cấp thành viên. Hãy trở thành đại lý và bắt đầu kinh doanh.
+								</p>
+							</div>
+							<div class="card-link">
+								<i class="fas fa-arrow-right"></i>
+								Xem thêm
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card service-card border-0">
+						<div class="card-header border-bottom-0 rounded-0 p-0 bg-transparent">
+							<img src="./assets/images/service/topupdiscount.png" alt="">
+						</div>
+						<div class="card-body px-0">
+							<div class="card-title">
+								Chiết khấu nạp thẻ
+							</div>
+							<div class="card-text">
+								<p>
+									Hỗ trợ nạp các loại tiền điện thoại, tiền game với chiết khấu tốt. Nạp tiền nhanh
+									chỉ trong vài giây, tiền nạp chính hãng từ nhà mạng. Nhấn vào đây để xem báo giá nạp
+									cước.
+								</p>
+							</div>
+							<div class="card-link">
+								<i class="fas fa-arrow-right"></i>
+								Xem thêm
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card service-card border-0">
+						<div class="card-header border-bottom-0 rounded-0 p-0 bg-transparent">
+							<img src="./assets/images/service/carddiscount.png" alt="">
+						</div>
+						<div class="card-body px-0">
+							<div class="card-title">
+								Chiết khấu mã thẻ
+							</div>
+							<div class="card-text">
+								<p>Cung cấp tất cả mệnh giá của các loại thẻ điện thoại, thẻ game trong nước và quốc tế
+									với chiết khấu theo cấp thành viên. Hãy trở thành đại lý và bắt đầu kinh doanh.
+								</p>
+							</div>
+							<div class="card-link">
+								<i class="fas fa-arrow-right"></i>
+								Xem thêm
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="section-article section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-heading">
+						<div class="section-heading_title">
+							Tin tức
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row row-g3">
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/support.png" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài khoản mới qua SMS
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/b.jpg" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Cách đổi thẻ cào sang thẻ Garena, Zing, Vcoin, Gosu, Soha, Gate, Funcard, Appota, Scoin,
+								Carot, Giftcode
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/v.jpg" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Tuyển đại lý c1 gạch cước, nạp tiền Viettel, Vina, Mobi, Vietnammobi, FTTH, SMS Game
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/bmc2.jpg" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Cài bảo mật, bảo vệ tài khoản bằng GoogleAuth hoặc mật khẩu cấp 2
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/support.png" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài khoản mới qua SMS
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/b.jpg" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Cách đổi thẻ cào sang thẻ Garena, Zing, Vcoin, Gosu, Soha, Gate, Funcard, Appota, Scoin,
+								Carot, Giftcode
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/v.jpg" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Tuyển đại lý c1 gạch cước, nạp tiền Viettel, Vina, Mobi, Vietnammobi, FTTH, SMS Game
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="card article-card bg-white">
+						<div class="card-header p-2 border-0 bg-transparent">
+							<img class="img-fluid mx-auto d-block" src="./assets/images/article/bmc2.jpg" alt="">
+						</div>
+						<div class="card-body">
+							<div class="card-title">
+								Cài bảo mật, bảo vệ tài khoản bằng GoogleAuth hoặc mật khẩu cấp 2
+							</div>
+						</div>
+						<a href="" class="stretched-link"></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script type="text/javascript" src="./assets/plugins/jquery.min.js"></script>
 <script type="text/javascript"
 		src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
 <script type="text/javascript"
