--- a/index.html
+++ b/index.html
@@ -121,6 +121,72 @@
 			</div>
 		</div>
 	</div>
+	<div class="section-partner section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-heading">
+						<div class="section-heading_title">
+							Đối tác
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row row-g6 justify-content-center">
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/mobifone.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/viettel.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/vianphone.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/vietnamobile.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/gmobile.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/evn.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/vcoin.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/zing.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/megacard.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/funtap.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/garena.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/ongame.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/momo.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/whypay.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/nganluong.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/baokim.png">
+				</div>
+				<div class="col-lg-2 col-4">
+					<img class="partner-image img-fluid" src="./assets/images/partner/vtc.png">
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="section-article section-gap">
 		<div class="container">
 			<div class="row">
@@ -244,6 +310,110 @@
 	</div>
 </div>
 
+<footer class="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="footer-top">
+					<div class="row">
+						<div class="col-md-3">
+							<div class="footer-item">
+								<div class="footer-item_text">
+									CÔNG TY TNHH NETPAY
+								</div>
+								<div class="footer-item_link">
+									Hotline: <a href="tel:1900 1565">1900 1565</a>
+								</div>
+								<div class="footer-item_link">
+									Email: <a href="mailto:nguyennghia@nencer.net">nguyennghia@nencer.net</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="footer-item">
+								<div class="footer-item_text footer-item_decor">
+									CHÍNH SÁCH
+								</div>
+								<ul class="footer-item_list">
+									<li>
+										<a href="">Về chúng tôi</a>
+									</li>
+									<li>
+										<a href="">Chính sách bảo mật</a>
+									</li>
+									<li>
+										<a href="">Về chúng tôi</a>
+									</li>
+									<li>
+										<a href="">Chính sách bảo mật</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="footer-item">
+								<div class="footer-item_text footer-item_decor">
+									HƯỚNG DẪN
+								</div>
+								<ul class="footer-item_list">
+									<li>
+										<a href="">Về chúng tôi</a>
+									</li>
+									<li>
+										<a href="">Chính sách bảo mật</a>
+									</li>
+									<li>
+										<a href="">Về chúng tôi</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="footer-item">
+								<div class="footer-item_text footer-item_decor">
+									CỘNG ĐỒNG
+								</div>
+								<ul class="list-unstyled mb-0 footer-item_social">
+									<li class="facebook">
+										<a href="https://www.facebook.com/">
+											<i class="fab fa-facebook-f"></i>
+										</a>
+									</li>
+									<li class="telegram">
+										<a href="https://telegram.com/">
+											<i class="fab fa-telegram-plane"></i>
+										</a>
+									</li>
+									<li class="twitter">
+										<a href="https://twitter.com/">
+											<i class="fab fa-twitter"></i>
+										</a>
+									</li>
+									<li class="youtube">
+										<a href="https://www.youtube.com/">
+											<i class="fab fa-youtube"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer-bottom">
+					<div class="row">
+						<div class="col-md-6">
+							<a href="#" class="footer-bottom_copyright">Software by Nencer Jsc.,</a>
+						</div>
+						<div class="col-md-6 text-md-right">
+							<a href="#" class="footer-bottom_link">English</a>
+							<a href="#" class="footer-bottom_link active">Tiếng việt</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 <script type="text/javascript" src="./assets/plugins/jquery.min.js"></script>
 <script type="text/javascript"
 		src="./assets/plugins/bootstrap/bootstrap.bundle.min.js"></script>
