--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -333,7 +333,7 @@
                         <div class="sidebar-inner">
                             <div class="sidebar-inner_item">
                                 <div class="row row-5">
-                                    <div class="col-sm-8">
+                                    <div class="col-8">
                                         <div class="sidebar-item_detail">
                                             <div class="sidebar-item_detail__title">
                                                 <a href="">Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài
@@ -345,7 +345,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-4">
                                         <div class="sidebar-item_image">
                                             <a href="">
                                                 <img src="./assets/images/article/bmc2.jpg" alt="">
@@ -356,7 +356,7 @@
                             </div>
                             <div class="sidebar-inner_item">
                                 <div class="row row-5">
-                                    <div class="col-sm-8">
+                                    <div class="col-8">
                                         <div class="sidebar-item_detail">
                                             <div class="sidebar-item_detail__title">
                                                 <a href="">Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài
@@ -368,31 +368,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4">
-                                        <div class="sidebar-item_image">
-                                            <a href="">
-                                                <img src="./assets/images/article/bmc2.jpg" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="sidebar-inner_item">
-                                <div class="row row-5">
-                                    <div class="col-sm-8">
-                                        <div class="sidebar-item_detail">
-                                            <div class="sidebar-item_detail__title">
-                                                <a href="">Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài
-                                                    khoản mới qua SMS
-                                                </a>
-                                            </div>
-                                            <div class="sidebar-item_detail__meta">
-                                                2022-02-18 19:49:21
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-4">
                                         <div class="sidebar-item_image">
                                             <a href="">
                                                 <img src="./assets/images/article/bmc2.jpg" alt="">
@@ -404,7 +380,7 @@
 
                             <div class="sidebar-inner_item">
                                 <div class="row row-5">
-                                    <div class="col-sm-8">
+                                    <div class="col-8">
                                         <div class="sidebar-item_detail">
                                             <div class="sidebar-item_detail__title">
                                                 <a href="">Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài
@@ -416,7 +392,31 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-4">
+                                        <div class="sidebar-item_image">
+                                            <a href="">
+                                                <img src="./assets/images/article/bmc2.jpg" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="sidebar-inner_item">
+                                <div class="row row-5">
+                                    <div class="col-8">
+                                        <div class="sidebar-item_detail">
+                                            <div class="sidebar-item_detail__title">
+                                                <a href="">Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài
+                                                    khoản mới qua SMS
+                                                </a>
+                                            </div>
+                                            <div class="sidebar-item_detail__meta">
+                                                2022-02-18 19:49:21
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
                                         <div class="sidebar-item_image">
                                             <a href="">
                                                 <img src="./assets/images/article/bmc2.jpg" alt="">
