--- a/bang-gia.html
+++ b/bang-gia.html
@@ -99,6 +99,11 @@
 									</a>
 								</li>
 								<li>
+									<a href="mua-ma-the.html">
+										Mua mã thẻ
+									</a>
+								</li>
+								<li>
 									<a href="tin-tuc.html">
 										Tin tức
 										<i class="fas fa-angle-down"></i>
