--- a/index.html
+++ b/index.html
@@ -487,8 +487,18 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/support.png" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài khoản mới qua SMS
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -500,9 +510,19 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/b.jpg" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Cách đổi thẻ cào sang thẻ Garena, Zing, Vcoin, Gosu, Soha, Gate, Funcard, Appota, Scoin,
                                 Carot, Giftcode
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -514,8 +534,18 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/v.jpg" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Tuyển đại lý c1 gạch cước, nạp tiền Viettel, Vina, Mobi, Vietnammobi, FTTH, SMS Game
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -527,8 +557,18 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/bmc2.jpg" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Cài bảo mật, bảo vệ tài khoản bằng GoogleAuth hoặc mật khẩu cấp 2
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -540,8 +580,18 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/support.png" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài khoản mới qua SMS
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -553,9 +603,19 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/b.jpg" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Cách đổi thẻ cào sang thẻ Garena, Zing, Vcoin, Gosu, Soha, Gate, Funcard, Appota, Scoin,
                                 Carot, Giftcode
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -567,8 +627,18 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/v.jpg" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Tuyển đại lý c1 gạch cước, nạp tiền Viettel, Vina, Mobi, Vietnammobi, FTTH, SMS Game
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
@@ -580,8 +650,18 @@
                             <img class="img-fluid mx-auto d-block" src="./assets/images/article/bmc2.jpg" alt="">
                         </div>
                         <div class="card-body">
+                            <div class="card-meta">
+                                Ngày đăng: 20-02-2015
+                            </div>
                             <div class="card-title">
                                 Cài bảo mật, bảo vệ tài khoản bằng GoogleAuth hoặc mật khẩu cấp 2
+                            </div>
+                            <div class="card-desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
+                                praesentium quae quasi qui sapiente, vel vero.
+                            </div>
+                            <div class="card-link">
+                                Xem thêm <i class="fas fa-angle-right"></i>
                             </div>
                         </div>
                         <a href="" class="stretched-link"></a>
