--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <div class="section-banner">
         <div class="swiper" id="slideBanner">
             <div class="swiper-wrapper">
-                <div style="background-color: #52658c;" class="swiper-slide">
+                <div style="background-color: var(--primary-color);" class="swiper-slide">
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-6 order-2 order-md-1">
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-color: #52658c;" class="swiper-slide">
+                <div style="background-color: var(--primary-color);" class="swiper-slide">
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-6 order-2 order-md-1">
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-color: #52658c;" class="swiper-slide">
+                <div style="background-color: var(--primary-color);" class="swiper-slide">
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-6 order-2 order-md-1">
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-color: #52658c;" class="swiper-slide">
+                <div style="background-color: var(--primary-color);" class="swiper-slide">
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-6 order-2 order-md-1">
@@ -469,6 +469,47 @@
             </div>
         </div>
     </div>
+    <div class="section-why section-gap">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <div class="section-heading_title">
+                            Vì sao chọn chúng tôi?
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="row row-g3">
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="why-item">
+                                <span>01</span>
+                                Chiết khấu thẻ tốt nhất thị trường
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="why-item">
+                                <span>02</span>
+                                Thẻ chính hãng từ nhà mạng
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="why-item">
+                                <span>03</span>
+                                Hỗ trợ API an toàn chuyên nghiệp
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="why-item">
+                                <span>04</span>
+                                Hỗ trợ khách hàng 24/24
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section-article section-gap">
         <div class="container">
             <div class="row">
@@ -481,99 +522,6 @@
                 </div>
             </div>
             <div class="row row-g3">
-                <div class="col-md-3">
-                    <div class="card article-card bg-white">
-                        <div class="card-header p-2 border-0 bg-transparent">
-                            <img class="img-fluid mx-auto d-block" src="./assets/images/article/support.png" alt="">
-                        </div>
-                        <div class="card-body">
-                            <div class="card-meta">
-                                Ngày đăng: 20-02-2015
-                            </div>
-                            <div class="card-title">
-                                Hướng dẫn cấp lại mật khẩu, mật khẩu cấp 2, OTP, đăng ký tài khoản mới qua SMS
-                            </div>
-                            <div class="card-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
-                                praesentium quae quasi qui sapiente, vel vero.
-                            </div>
-                            <div class="card-link">
-                                Xem thêm <i class="fas fa-angle-right"></i>
-                            </div>
-                        </div>
-                        <a href="" class="stretched-link"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card article-card bg-white">
-                        <div class="card-header p-2 border-0 bg-transparent">
-                            <img class="img-fluid mx-auto d-block" src="./assets/images/article/b.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <div class="card-meta">
-                                Ngày đăng: 20-02-2015
-                            </div>
-                            <div class="card-title">
-                                Cách đổi thẻ cào sang thẻ Garena, Zing, Vcoin, Gosu, Soha, Gate, Funcard, Appota, Scoin,
-                                Carot, Giftcode
-                            </div>
-                            <div class="card-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
-                                praesentium quae quasi qui sapiente, vel vero.
-                            </div>
-                            <div class="card-link">
-                                Xem thêm <i class="fas fa-angle-right"></i>
-                            </div>
-                        </div>
-                        <a href="" class="stretched-link"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card article-card bg-white">
-                        <div class="card-header p-2 border-0 bg-transparent">
-                            <img class="img-fluid mx-auto d-block" src="./assets/images/article/v.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <div class="card-meta">
-                                Ngày đăng: 20-02-2015
-                            </div>
-                            <div class="card-title">
-                                Tuyển đại lý c1 gạch cước, nạp tiền Viettel, Vina, Mobi, Vietnammobi, FTTH, SMS Game
-                            </div>
-                            <div class="card-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
-                                praesentium quae quasi qui sapiente, vel vero.
-                            </div>
-                            <div class="card-link">
-                                Xem thêm <i class="fas fa-angle-right"></i>
-                            </div>
-                        </div>
-                        <a href="" class="stretched-link"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card article-card bg-white">
-                        <div class="card-header p-2 border-0 bg-transparent">
-                            <img class="img-fluid mx-auto d-block" src="./assets/images/article/bmc2.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <div class="card-meta">
-                                Ngày đăng: 20-02-2015
-                            </div>
-                            <div class="card-title">
-                                Cài bảo mật, bảo vệ tài khoản bằng GoogleAuth hoặc mật khẩu cấp 2
-                            </div>
-                            <div class="card-desc">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea eos impedit maxime
-                                praesentium quae quasi qui sapiente, vel vero.
-                            </div>
-                            <div class="card-link">
-                                Xem thêm <i class="fas fa-angle-right"></i>
-                            </div>
-                        </div>
-                        <a href="" class="stretched-link"></a>
-                    </div>
-                </div>
                 <div class="col-md-3">
                     <div class="card article-card bg-white">
                         <div class="card-header p-2 border-0 bg-transparent">
